--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,11 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>Welcome to {{title}}!</h1>
+    <h1>Welcome to {{title}}!</h1>
 </div>
 
 <h2>Message from the localhost:3000 : {{message}} </h2>
 
-<app-cube-component [rotationSpeedX]="0.005"
-                    [rotationSpeedY]="0.01">
-</app-cube-component>
+<app-createurPiste-component>
 
+</app-createurPiste-component>
