AJ - Ajout d'un code qui permet de compléter le polygone en liant le premier point au dernier ajouté

--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -1,1 +1,1 @@
-<div #container (click)="onMouseClick($event)"></div>
+<div #container (click)="onMouseClick($event)" (mouseover)="onMouseOver($event)"></div>
