YI: Ajout de la fonctionnalité qui supprime le dernier point ajouté

--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -1,1 +1,1 @@
-<div #container (click)="onMouseClick($event)" (mouseover)="onMouseOver($event)" (contextmenu)="onMouseRightClick($event)"></div>
+<div #container (click)="cliqueGauche($event)" (mouseover)="onMouseOver($event)" (contextmenu)="cliqueDroit($event)"></div>
