--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-    <h1>Welcome to {{title}}!</h1>
+    <h1>Bienvenue dans la section {{title}}!</h1>
 </div>
 
 <h2>Message from the localhost:3000 : {{message}} </h2>
