JGR : Obtention d'une grille persistente.

--- a/MotsCroises/client/src/app/app.component.html
+++ b/MotsCroises/client/src/app/app.component.html
@@ -9,6 +9,10 @@
 
 <h1> GRILLE GÉNÉRÉ </h1>
 <div [innerHTML]="grille"></div>
+
+
+<h1>GRILLE PERSISTENTE</h1>
+<div [innerHTML]="grillePersistente"></div>
 <h2>Here are some links to help you start: </h2>
 <ul>
     <li>
