--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -1,2 +1,6 @@
-<div #container (click)="cliqueGauche($event)" (contextmenu)="cliqueDroit($event)"></div>
+<div #container
+     (mousemove)="onMouseMove($event)"
+     (contextmenu)="cliqueDroit($event)"
+     (mousedown)="onMouseDown($event)"
+     (mouseup)="onMouseUp($event)"></div>
 <app-pisteValidator *ngIf="condition()" [points]="listePoints()" [lignes]="listeLignes()"></app-pisteValidator>
