rectification clic droit, contextMenu ne s'ouvre plus. FIn gestion clics

--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -1,4 +1,5 @@
 <div #container
+     (contextmenu)="oncontextmenu()"
      (mousemove)="onMouseMove($event)"
      (mousedown)="onMouseDown($event)"
      (mouseup)="onMouseUp($event)"></div>
