--- a/Course/client/src/app/piste/pisteValidation.component.html
+++ b/Course/client/src/app/piste/pisteValidation.component.html
@@ -15,6 +15,6 @@
             <label for="description">Description</label>
             <input type="text" class="form-control" ngModel name="description">
         </div>
-        <button class="btn btn-primary" type="submit">Sauvegarder</button>
+        <button class="btn btn-primary" type="submit">Sauvegarder Circuit</button>
     </form>
 </div>
