JGR: Affichage de mots croisés facile, moyen et difficile.

--- a/MotsCroises/client/src/app/app.component.html
+++ b/MotsCroises/client/src/app/app.component.html
@@ -12,7 +12,12 @@
 
 
 <h1>GRILLE PERSISTENTE</h1>
-<div [innerHTML]="grillePersistente"></div>
+<h2>FACILE</h2>
+<div [innerHTML]="grillePersistenteFacile"></div>
+<h2>MOYEN</h2>
+<div [innerHTML]="grillePersistenteMoyen"></div>
+<h2>DIFFICILE</h2>
+<div [innerHTML]="grillePersistenteDifficile"></div>
 <h2>Here are some links to help you start: </h2>
 <ul>
     <li>
