--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -4,4 +4,4 @@
 
 <div #container (contextmenu)="oncontextmenu()" (click)="onMouseClick($event)" (mousemove)="onMouseMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)"></div>
 <br>
-<app-pistevalidator-component *ngIf="condition()" [points]="listePoints()" [lignes]="listeLignes()"></app-pistevalidator-component>
+<app-pistevalidator-component *ngIf="condition()" [points]="listePoints()"></app-pistevalidator-component>
