Test angle de moins de 45 degres avec trois points

--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -5,3 +5,8 @@
 <div #container (contextmenu)="oncontextmenu()" (click)="onMouseClick($event)" (mousemove)="onMouseMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)"></div>
 <br>
 <app-pistevalidator-component *ngIf="condition()" [points]="listePoints()"></app-pistevalidator-component>
+<script>function showCoords(evt){
+    alert(
+        "clientX value: " +evt.clientX+ "\n"
+    );
+}</script>
