--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -1,12 +1,10 @@
 <h4 class="alert alert-warning" *ngIf="erreursCircuit()">
     <strong>Warning! </strong><br>{{message}}</h4>
+<h4 class="alert alert-success" *ngIf="condition()">
+    <strong>Success! </strong><br>Votre dessin est terminé mais vous pouvez le modifier encore.</h4>
+
 
 
 <div #container (contextmenu)="oncontextmenu()" (click)="onMouseClick($event)" (mousemove)="onMouseMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)"></div>
 <br>
 <app-pistevalidator-component *ngIf="condition()" [points]="listePoints()"></app-pistevalidator-component>
-<script>function showCoords(evt){
-    alert(
-        "clientX value: " +evt.clientX+ "\n"
-    );
-}</script>
