--- a/MotsCroises/client/src/app/app.component.html
+++ b/MotsCroises/client/src/app/app.component.html
@@ -18,7 +18,7 @@
     <div *ngFor="let niveauPartie of niveaux;">
         <input type="radio" name="choixNiveau" (click)="ajouterNiveauPartie(niveauPartie)" value={niveauPartie}> {{niveauPartie}}
     </div>
-    <a href="/partie/{{typePartie}}/{{niveauPartie}}">Heroes</a>
+    <a href="/partie/{{typePartie}}/{{niveauPartie}}">Creer partie</a>
 </form>
 
 
