--- a/Course/client/src/app/pisteValidator/pisteValidation.component.html
+++ b/Course/client/src/app/pisteValidator/pisteValidation.component.html
@@ -3,19 +3,19 @@
     <form *ngIf="display" ngNativeValidate (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
             <label for="nomPiste">Nom de la piste</label>
-            <input type="text" class="form-control" ngModel name="nomPiste">
+            <input type="text" class="form-control" ngModel name="nomPiste" required>
         </div>
         <div class="form-group">
             <label for="TypeCourse">Type de course</label>
-            <select class="form-control" id="TypeCourse" ngModel name="typeCourse">
+            <select class="form-control" id="TypeCourse" ngModel name="typeCourse" required>
               <option>Amateur</option>
               <option>Professionnel</option>
             </select>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <input type="text" class="form-control" ngModel name="description">
+            <input type="text" class="form-control" ngModel name="description" required>
         </div>
-        <button class="btn btn-success" type="submit">Sauvegarder Circuit</button>
+        <button class="btn btn-success" type="submit" [disabled]="!f.form.valid">Sauvegarder Circuit</button>
     </form>
 </div>
