AJ: La vue pour chaque piste

--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -2,4 +2,4 @@
 <div style="text-align:center">
     <h1>Bienvenue dans la section {{title}}!</h1>
 </div>
-<app-createurpiste-component></app-createurpiste-component>
+<app-piste-component></app-piste-component>
