JGR : Renommer les x,y de l'objet case pour numeroLigne et numeroColonne. Ajout d'un fichier configuration.ts pour les liens sur le serveur. Suppression du dossier data.

--- a/MotsCroises/client/src/app/app.component.html
+++ b/MotsCroises/client/src/app/app.component.html
@@ -24,6 +24,9 @@
 
 <h1> GRILLE GÉNÉRÉ </h1>
 <div [innerHTML]="grille"></div>
+<h2>Emplacements Mots</h2>
+<div [innerHTML]="emplacementsMot"></div>
+
 
 
 <h1>GRILLE PERSISTENTE</h1>
