AJ: modification de la classe piste et sa vue

--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-    <h1>Bienvenue dans la section {{title}}!</h1>
 </div>
-<app-piste-component></app-piste-component>
+<app-listepiste-component></app-listepiste-component>
