--- a/Course/client/src/app/piste/piste.component.html
+++ b/Course/client/src/app/piste/piste.component.html
@@ -1,20 +1,20 @@
 <div class="col-md-8 col-md-offset-2">
     <div class="panel panel-default">
         <div class="panel-heading" (click)="onClick()">
-            <strong>Nom piste</strong>
+            <strong>{{ piste.nom }}</strong>
         </div>
         <div class="panel-body" *ngIf="display">
-            <p>Type Course: </p>
-            <p>Description: </p>
-            <p>Cote appréciation: /5</p>
-            <p>Nombre de fois jouée: </p>
+            <p>Type Course: {{ piste.typeCourse }}</p>
+            <p>Description: {{ piste.description }}</p>
+            <p>Cote appréciation: {{ piste.coteAppreciation }}/5</p>
+            <p>Nombre de fois jouée: {{ piste.nombreFoisJouee }} </p>
         </div>
         <footer class="panel-footer">
-            <div class="config">
-                <a class="btn btn-warning" (click)="onEdit()">
+            <div>
+                <a class="config" class="btn btn-warning" (click)="onEdit()">
                     <i class="fa fa-cog" aria-hidden="true"></i>Modifier
                 </a>
-                <a class="btn btn-danger" (click)="onDelete()">
+                <a class="config" class="btn btn-danger" (click)="onDelete()">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>Supprimer
                 </a>
             </div>
