--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -2,3 +2,5 @@
 <div style="text-align:center">
 </div>
 <app-listepiste-component></app-listepiste-component>
+<hr>
+<router-outlet></router-outlet>
