AJ: routage entre la liste de piste et le créateur de piste

--- a/Course/client/src/app/piste/piste.component.css
+++ b/Course/client/src/app/piste/piste.component.css
@@ -7,3 +7,13 @@ a,
 i {
     margin-right: 10px;
 }
+
+.panel>.panel-heading:hover {
+    background-image: none;
+    background-color: red;
+    color: white;
+}
+
+p {
+    font-family: fantasy
+}
