--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
 </div>
-<app-listepiste-component></app-listepiste-component>
+<app-course></app-course>
 <hr>
 <router-outlet></router-outlet>
