--- a/Course/client/src/app/createurPiste/createurPiste.component.html
+++ b/Course/client/src/app/createurPiste/createurPiste.component.html
@@ -7,4 +7,5 @@
 
 <div #container (contextmenu)="oncontextmenu()" (click)="onMouseClick($event)" (mousemove)="onMouseMove($event)" (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)"></div>
 <br>
+<button class="btn btn-primary" (click)="revenirEnarriere()">Back</button>
 <app-pistevalidator-component *ngIf="condition()" [points]="listePoints()"></app-pistevalidator-component>
