YI: Création du component Tableau de scores

--- a/Course/client/src/app/piste/piste.component.html
+++ b/Course/client/src/app/piste/piste.component.html
@@ -8,6 +8,7 @@
             <p>Description: {{ piste.description }}</p>
             <p>Cote appréciation: {{ piste.coteAppreciation }}/5</p>
             <p>Nombre de fois jouée: {{ piste.nombreFoisJouee }} </p>
+            <button type="button" (click)="montrerLesScores()">Meilleurs scores</button>
         </div>
         <footer class="panel-footer">
             <div>
