DT restructuration code

--- a/MotsCroises/client/src/app/canvas/canvas-view.component.html
+++ b/MotsCroises/client/src/app/canvas/canvas-view.component.html
@@ -1,3 +1,4 @@
-<div class='container'>
-  <canvas #canvasjeu width="700" height="700" id='game-canvas'></canvas>
-</div>
+  <h1>Grille à afficher </h1>
+  <div class='container'>
+    <canvas #canvasjeu width="700" height="700" id='game-canvas'></canvas>
+  </div>
