--- a/MotsCroises/client/src/app/game_view/game-view.component.html
+++ b/MotsCroises/client/src/app/game_view/game-view.component.html
@@ -1,16 +1,11 @@
 <div class='info_jeu'>
-  <h1>Infos de jeu
-  </h1>
+  <infos-jeu-view-component></infos-jeu-view-component>
 </div>
 <div class='game_container'>
   <div class='grille'>
-    <h1>Grille à afficher </h1>
     <canvas-view-component></canvas-view-component>
   </div>
   <div class='table_indices'>
-    <h1>Indices</h1>
-    <div>Vertical : </div>
-
-    <div>Horizontal : </div>
+    <indice-view-component></indice-view-component>
   </div>
 </div>
