--- a/MotsCroises/client/src/app/indice/indice-view.component.html
+++ b/MotsCroises/client/src/app/indice/indice-view.component.html
@@ -1,4 +1,9 @@
 <h1>Indices</h1>
-<div class='group-name'>Vertical : </div>
+<div class='group-name'>
+  Vertical :
+  <li  *ngFor="let indice of indices" (click)="onSelect(indice)" [class.selected]="indice === selectedIndice">
+    <span class="badge">{{indice.id}}</span> {{indice.name}}
+  </li>
+</div>
 
 <div class='group-name'>Horizontal : </div>
