--- a/MotsCroises/client/src/app/canvas/canvas-view.component.html
+++ b/MotsCroises/client/src/app/canvas/canvas-view.component.html
@@ -1,4 +1,5 @@
   <h1>Grille à afficher </h1>
   <div class='container'>
-    <canvas #canvasjeu width="700" height="700" id='game-canvas'></canvas>
+    <div (click)="rafraichirCanvas()" >{{message}}</div>
+    <canvas #canvasjeu width="900" height="900" id='game-canvas' ></canvas>
   </div>
