Les mots verticaux sont affiches dans la section vertical et les mots horizontaux sont affiches dans la section horizontale

--- a/MotsCroises/client/src/app/indice/indice-view.component.html
+++ b/MotsCroises/client/src/app/indice/indice-view.component.html
@@ -1,9 +1,14 @@
 <h1>Indices</h1>
 <div class='group-name'>
   Vertical :
-  <li  *ngFor="let indice of indices" (click)="onSelect(indice)" [class.selected]="indice === selectedIndice">
-    <span class="badge">{{indice.id}}</span> {{indice.name}}
-  </li>
+  <span  *ngFor="let indice of indices" (click)="onSelect(indice)" [class.selected]="indice === selectedIndice">
+    <li *ngIf="indice.sens">{{indice.id}} {{indice.name}}</li> 
+  </span>
 </div>
 
-<div class='group-name'>Horizontal : </div>
+<div class='group-name'>
+  Horizontal : 
+  <span  *ngFor="let indice of indices" (click)="onSelect(indice)" [class.selected]="indice === selectedIndice">
+    <li *ngIf="!indice.sens">{{indice.id}} {{indice.name}}</li> 
+  </span>
+  </div>
