--- a/MotsCroises/client/src/app/indice/indice-view.component.html
+++ b/MotsCroises/client/src/app/indice/indice-view.component.html
@@ -2,14 +2,14 @@
 <h1>Indices</h1>
 <div class='group-name'>
   Vertical :
-  <span  *ngFor="let indice of indices" (click)="onSelect(indice)" [class.selected]="indice === selectedIndice">
-    <li *ngIf="indice.sens">{{indice.id}} {{indice.name}}</li> 
+  <span  *ngFor="let indice of indices" (click)="onSelect(indice)">
+    <li *ngIf="indice.sens" [class.selected]="indice === selectedIndice">{{indice.id}} {{indice.name}}</li> 
   </span>
 </div>
 
 <div class='group-name'>
   Horizontal : 
-  <span  *ngFor="let indice of indices" (click)="onSelect(indice)" [class.selected]="indice === selectedIndice">
-    <li *ngIf="!indice.sens">{{indice.id}} {{indice.name}}</li> 
+  <span  *ngFor="let indice of indices" (click)="onSelect(indice)">
+    <li *ngIf="!indice.sens" [class.selected]="indice === selectedIndice">{{indice.id}} {{indice.name}}</li> 
   </span>
   </div>
