DT SVD : mise a jour liste indices

--- a/MotsCroises/client/src/app/indice/indice-view.component.css
+++ b/MotsCroises/client/src/app/indice/indice-view.component.css
@@ -5,6 +5,12 @@
   text-decoration: underline;
 }
 
-li.selected {
+span.selected {
   color: #00FFFF;
 }
+
+.indice {
+  display: inline-block;
+  text-decoration: none;
+}
+
