--- a/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
+++ b/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
@@ -1,5 +1,9 @@
 <div class='container'>
-  <div class='player_info'>Joueur 1 data</div>
+  <div class='player_info'>
+    Joueur 1 data
+    <div>{{motEnCours1}}</div>
+  </div>
+
   <div>
     <div class='titre'>Infos de jeu</div>
     <div>Temps</div>
