--- a/Course/client/src/app/piste/piste.component.html
+++ b/Course/client/src/app/piste/piste.component.html
@@ -15,7 +15,7 @@
         </div>
         <footer class="panel-footer">
             <div>
-                <a class="config" class="btn btn-warning" (click)="onEdit()">
+                <a [routerLink]="['/createurPiste']" class="config" class="btn btn-warning" (click)="onEdit()">
                     <i class="fa fa-cog" aria-hidden="true"></i>Modifier
                 </a>
                 <a class="config" class="btn btn-danger" (click)="onDelete()">
