YI: Ajout d'une scene pour tester le bon foncionnement du programme

--- a/Course/client/src/app/generateurPiste/generateurpiste.component.html
+++ b/Course/client/src/app/generateurPiste/generateurpiste.component.html
@@ -1,3 +1,5 @@
-<div>
-    <h1>BIENVENUE DANS LE GENERATEUR DE PISTE !</h1>
-</div>
+<br>
+<br>
+<div #container></div>
+<br>
+<app-generateurpiste-component></app-generateurpiste-component>
