--- a/Course/client/src/app/course/course.component.html
+++ b/Course/client/src/app/course/course.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<header class="row">
+    <br>
+    <nav class="col-md-8 col-md-offset-2">
+        <ul class="nav nav-pills">
+            <li routerLinkActive="active"><a [routerLink]="['/createurPiste']">Createur de piste</a></li>
+            <li routerLinkActive="active"><a [routerLink]="['/listePiste']" (click)="surClick()">Liste de Piste</a></li>
+        </ul>
+    </nav>
+</header>
+<br>
