--- a/Course/client/src/app/piste/piste.component.html
+++ b/Course/client/src/app/piste/piste.component.html
@@ -18,7 +18,7 @@
                 <a class="config" class="btn btn-success" (click)="commencerPartie()">
                     <i class="fa fa-flag-checkered" aria-hidden="true"></i>Choisir une Course
                 </a>
-                <a href="http://localhost:4200/createurPiste" class="config" class="btn btn-warning" (click)="onEdit()">
+                <a [routerLink]="['/createurPiste']" class="config" class="btn btn-warning" (click)="onEdit()">
                     <i class="fa fa-cog" aria-hidden="true"></i>Modifier
                 </a>
                 <a class="config" class="btn btn-danger" (click)="onDelete()">
