DT ajout indices en tant que lien

--- a/MotsCroises/client/src/app/game_view/game-view.component.html
+++ b/MotsCroises/client/src/app/game_view/game-view.component.html
@@ -1,5 +1,5 @@
 <div class='info_jeu'>
-  <infos-jeu-view-component></infos-jeu-view-component>
+  <infos-jeu-view-component [nbJoueurs]="nbJoueurs"></infos-jeu-view-component>
 </div>
 <div class='game_container'>
   <div class='grille'>
