--- a/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
+++ b/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
@@ -1,7 +1,8 @@
 <div class='container'>
   <div class='player_info'>
     Joueur 1 data
-    <div>{{motEnCours1}}</div>
+    <div>{{motTrouveJ1}} mots trouvés</div>
+    <div>{{motEnCoursJ1}}</div>
   </div>
 
   <div>
@@ -9,5 +10,10 @@
     <div>Temps</div>
     <div>Autre ?</div>
   </div>
-  <div class='player_info'>Joueur 2 data</div>
+  <div class='player_info' [hidden]="nbJoueurs === '1 joueur' ">
+    Joueur 2 data
+    <div>{{motTrouveJ2}} mots trouvés</div>
+    <div>{{motEnCoursJ2}}</div>
+
+  </div>
 </div>
