--- a/Course/client/src/app/generateurPiste/generateurpiste.component.html
+++ b/Course/client/src/app/generateurPiste/generateurpiste.component.html
@@ -1,4 +1,4 @@
 <br>
 <br>
-<div #container (wheel)='cameraZ($event)' (keyup)='deplacement($event)'></div>
+<div #container (wheel)='cameraZ($event)'></div>
 <br>
