--- a/Course/client/src/app/listePiste/listePiste.component.html
+++ b/Course/client/src/app/listePiste/listePiste.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-8 col-md-offset-2">
+<div class="han" class="col-md-8 col-md-offset-2">
     <app-piste-component [piste]="piste" *ngFor="let piste of listePistes"></app-piste-component>
     <button type="button" class="btn btn-primary-outline pull-right">
       <i class="fa fa-plus"></i>
