--- a/Course/client/src/app/pisteValidator/pisteValidation.component.html
+++ b/Course/client/src/app/pisteValidator/pisteValidation.component.html
@@ -3,7 +3,7 @@
     <form *ngIf="display" ngNativeValidate (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
             <label for="nomPiste">Nom de la piste</label>
-            <input type="text" class="form-control" ngModel name="nomPiste" required>
+            <input type="text" class="form-control" ngModel name="nomPiste" [ngModel]="pisteAmodifier?.nom" required>
         </div>
         <div class="form-group">
             <label for="TypeCourse">Type de course</label>
