--- a/MotsCroises/client/src/app/game_view/game-view.component.html
+++ b/MotsCroises/client/src/app/game_view/game-view.component.html
@@ -1,5 +1,5 @@
 <div class='info_jeu'>
-    <app-infos-jeu-view-component [nbJoueurs]="nbJoueurs"></app-infos-jeu-view-component>
+    <app-infos-jeu-view-component #infosJeuViewComponent [nbJoueurs]="nbJoueurs"></app-infos-jeu-view-component>
 </div>
 <div class='game_container'>
     <div class='grille'>
