AJ DT mot croises recommencer partie

--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    <a href="/partie/{{typePartie}}/{{niveauPartie}}" >Creer partie</a>
+    <a (click)="demanderCreationPartie()">Creer partie</a>
   </form>
-  <a [routerLink]="['/view', nbJoueursPartie]" >Afficher Partie</a>
+
 
