--- a/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
+++ b/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
@@ -9,7 +9,7 @@
     <div class='titre'>Infos de jeu</div>
     <div>{{dureeJeu}}</div>
   </div>
-  <div class='player_info' [hidden]="nbJoueurs === '1 joueur' ">
+  <div class='player_info' [hidden]="nbJoueurs === '0' ">
     <div class='titre'>Joueur 2</div>
     <div>{{motTrouveJ2}} mots trouvés</div>
     <div>{{motEnCoursJ2}}</div>
