--- a/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
+++ b/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
@@ -7,7 +7,7 @@
 
   <div>
     <div class='titre'>Infos de jeu</div>
-    <div>{{dureeJeu}}</div>
+    <div>{{tempsRestant}}</div>
   </div>
   <div class='player_info' [hidden]="nbJoueurs === '0' ">
     <div class='titre'>Joueur 2</div>
