--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -2,31 +2,33 @@
 <div class="partieDiv">
   <h1>Configuration d'une partie</h1>
 
-  <form action="">
+  <form action="" ngNativeValidate (ngSubmit)="demanderCreationPartie()" >
     <div class="partieForm">
       <div>
         <h2>Type de partie :</h2>
         <div *ngFor="let typePartie of types;">
-          <input type="radio" name="choixType" (click)="ajouterTypePartie(typePartie)" value={typePartie}>
+          <input type="radio" name="choixType" (click)="ajouterTypePartie(typePartie)" value={typePartie} required>
           {{typePartieValue[typePartie]}}
         </div>
       </div>
       <div>
         <h2>Niveau de difficulté :</h2>
         <div *ngFor="let niveauPartie of niveaux;">
-          <input type="radio" name="choixNiveau" (click)="ajouterNiveauPartie(niveauPartie)" value={niveauPartie}>
+          <input type="radio" name="choixNiveau" (click)="ajouterNiveauPartie(niveauPartie)" value={niveauPartie} required>
           {{niveauValue[niveauPartie]}}
         </div>
       </div>
       <div>
         <h2>Nombre de joueurs :</h2>
         <div *ngFor="let nbJoueur of nbJoueurs;">
-          <input type="radio" name="choixJoueurs" (click)="ajouterNbJoueursPartie(nbJoueur)" value={nbJoueur}>
+          <input type="radio" name="choixJoueurs" (click)="ajouterNbJoueursPartie(nbJoueur)" value={nbJoueur} required>
           {{nbJoueursValue[nbJoueur]}}
         </div>
       </div>
     </div>
-    <a (click)="demanderCreationPartie()">Creer partie</a>
+    <button>Creer partie</button>
   </form>
+
+</div>
 
 
