--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
 </div>
-<app-course></app-course>
-<router-outlet></router-outlet>
+<!-- <app-course></app-course>-->
+<app-authentification></app-authentification>
 <hr>
