--- a/Course/client/src/app/utilisateur/authentification.component.html
+++ b/Course/client/src/app/utilisateur/authentification.component.html
@@ -1,29 +1,27 @@
-<div class="container">
-    <h2>Selectionnez votre profil:</h2>
+<div>
     <div class="radio">
         <label><input (click)="clickerAdmin()" type="radio" name="optradio">Administrateur</label>
-    </div>
-    <div class="radio">
         <label><input (click)="clickerJoueur()" type="radio" name="optradio">Joueur</label>
     </div>
-    <div *ngIf="administrateurChoisie">
-        <form ngNativeValidate (ngSubmit)="seConnecter(form)" #form="ngForm">
+    <div *ngIf="administrateurChoisie" class="form">
+        <form ngNativeValidate (ngSubmit)="soummetre(f)" #f="ngForm">
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="text" class="form-control" ngModel name="email" required>
+                <input type="text" class="form-control" ngModel name="email" placeholder="Entrer votre email" required>
             </div>
             <div class="form-group">
                 <label for="motDePasse">Mot de passe</label>
-                <input type="password" class="form-control" ngModel name="motDePasse" required>
+                <input type="password" class="form-control" ngModel name="motDePasse" placeholder="Entrer votre mot de passe" required>
             </div>
-            <button class="btn btn-success" type="submit" [disabled]="!form.form.valid">Se connecter</button>
+            <button class="btn btn-success" type="submit" [disabled]="!f.form.valid">Se connecter</button>
+            <a href="">mot de passe oublié?</a>
         </form>
     </div>
-    <div *ngIf="joueurChoisie">
-        <form ngNativeValidate (ngSubmit)="valider(f)" #f="ngForm">
+    <div *ngIf="joueurChoisie" class="form2">
+        <form ngNativeValidate (ngSubmit)="soummetre(f)" #f="ngForm">
             <div class="form-group">
                 <label for="nomJoueur">Entre votre nom de joueur</label>
-                <input type="text" class="form-control" ngModel name="nomJoueur" required>
+                <input type="text" class="form-control" ngModel name="nomJoueur" placeholder="Entrer votre nom de joueur" required>
             </div>
             <button class="btn btn-success" type="submit" [disabled]="!f.form.valid">Valider</button>
         </form>
