--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-course></app-course>-->
-<app-authentification></app-authentification>
+<router-outlet></router-outlet>
