--- a/Course/client/src/app/listePiste/listePiste.component.html
+++ b/Course/client/src/app/listePiste/listePiste.component.html
@@ -4,4 +4,8 @@
       <i class="fa fa-plus"></i>
       <a [routerLink]="['/createurPiste']">Creer une Nouvelle Piste</a>
     </button>
+    <button *ngIf="estUnAdmin" type="button" class="btn btn-primary-outline pull-right">
+      <i class="fa fa-user" aria-hidden="true"></i>
+      <a [routerLink]="['/ModifierPass']">Modifier votre mot de passe</a>
+    </button>
 </div>
