JGR : Ajout bouton joindre partie en attente.

--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -27,6 +27,7 @@
       </div>
     </div>
     <button>Creer partie</button>
+    <button>Joindre une partie en attente</button>
   </form>
 
 </div>
