DT mock choix de partie en attente

--- a/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
+++ b/MotsCroises/client/src/app/choix_partie/choix-partie-view.component.html
@@ -28,8 +28,7 @@
     </div>
     <button>Creer partie</button>
   </form>
-  <button>Joindre une partie en attente</button>
-
+  <button (click)="joindrePartieEnAttente()">Joindre une partie en attente</button>
 </div>
 
 
