AJ: Implementation de fonctions pour filtrer les couleurs dans une scene

--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-course></app-course>-->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+
+<app-filtrecouleur></app-filtrecouleur>
