--- a/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
+++ b/MotsCroises/client/src/app/infos_jeu/infos-jeu-view.component.html
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='player_info'>
-    <div class='titre'>Joueur 1</div>
+    <div class='titre'>{{joueur.nomJoueur}}</div>
     <div>{{motTrouveJ1}} mots trouvés</div>
     <div>{{motEnCoursJ1}}</div>
   </div>
@@ -10,7 +10,7 @@
     <div>{{tempsRestant}}</div>
   </div>
   <div class='player_info' [hidden]="nbJoueurs === '0' ">
-    <div class='titre'>Joueur 2</div>
+    <div class='titre' >{{joueur2.nomJoueur}}</div>
     <div>{{motTrouveJ2}} mots trouvés</div>
     <div>{{motEnCoursJ2}}</div>
 
