--- a/Course/client/src/app/app.component.html
+++ b/Course/client/src/app/app.component.html
@@ -1,5 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-course></app-course>-->
-<!-- <router-outlet></router-outlet> -->
-
-<app-filtrecouleur></app-filtrecouleur>
+<router-outlet></router-outlet>
