AJ: ajout du tableau de temps et un rating component

--- a/Course/client/src/app/configurationPartie/configurationPartie.component.html
+++ b/Course/client/src/app/configurationPartie/configurationPartie.component.html
@@ -12,4 +12,5 @@
     </select>
     </div>
     <button class="commencer" class="btn btn-warning">Commencer partie</button>
+    <button (click)="allerAFinPartie()">Partie fini</button>
 </div>
