--- a/Course/client/src/app/piste/piste.component.html
+++ b/Course/client/src/app/piste/piste.component.html
@@ -15,7 +15,7 @@
                 <img src="{{ piste.vignette }}" alt="">
             </div>
             <div *ngIf="score" id="score">
-                <app-tableauscore-component [temps]="piste.meilleursTemps"></app-tableauscore-component>
+                <app-tableauscore-component></app-tableauscore-component>
             </div>
 
         </div>
