--- a/Course/client/src/app/tableauScore/tableauScore.component.html
+++ b/Course/client/src/app/tableauScore/tableauScore.component.html
@@ -1,3 +1,16 @@
-<div *ngFor="let i of temps">
-    <h1>{{i}}</h1>
-</div>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Position</th>
+            <th>Joueur</th>
+            <th>Temps</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let i of temps">
+            <th scope="row">{{i.position}}</th>
+            <td>{{i.nom}}</td>
+            <td>{{i.valeur}}</td>
+        </tr>
+    </tbody>
+</table>
