--- a/Course/client/src/app/rating/rating.component.html
+++ b/Course/client/src/app/rating/rating.component.html
@@ -1,27 +1,28 @@
-<form class="rating">
-    <label>
+<div class="col-md-8 col-md-offset-2">
+    <form class="rating">
+        <label>
       <input type="radio" name="stars" value="1" (click)="rating($event)"/>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
     </label>
-    <label>
+        <label>
       <input type="radio" name="stars" value="2" (click)="rating($event)"/>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
     </label>
-    <label>
+        <label>
       <input type="radio" name="stars" value="3" (click)="rating($event)"/>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>   
     </label>
-    <label>
+        <label>
       <input type="radio" name="stars" value="4" (click)="rating($event)"/>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
     </label>
-    <label>
+        <label>
       <input type="radio" name="stars" value="5" (click)="rating($event)"/>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
@@ -29,4 +30,5 @@
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
       <span class="icon"><i class="fa fa-star" aria-hidden="true"></i></span>
     </label>
-</form>
+    </form>
+</div>
