YI: Zoom fonctionne seulement pour la 3 eme personne

--- a/Course/client/src/app/generateurPiste/generateurpiste.component.html
+++ b/Course/client/src/app/generateurPiste/generateurpiste.component.html
@@ -1,5 +1,5 @@
 <br>
 <br>
-<div #container (wheel)='cameraZ($event)'></div>
+<div #container></div>
 <br>
 <app-configurationpartie></app-configurationpartie>
